crates/bitwarden-logging/tests/compilation_tests/skip_and_skip_all.stderr
error: `#[bitwarden_logging::instrument]` enforces `skip_all` by default. Use `fields(name = expr)` to opt in to logging specific arguments.
 --> tests/compilation_tests/skip_and_skip_all.rs:1:33
  |
1 | #[bitwarden_logging::instrument(skip(password), skip_all)]
  |                                 ^^^^^^^^^^^^^^

error: `#[bitwarden_logging::instrument]` enforces `skip_all` by default. Use `fields(name = expr)` to opt in to logging specific arguments.
 --> tests/compilation_tests/skip_and_skip_all.rs:1:49
  |
1 | #[bitwarden_logging::instrument(skip(password), skip_all)]
  |                                                 ^^^^^^^^
