crates/bitwarden-logging/tests/compilation_tests/skip_and_skip_all.rs
#[bitwarden_logging::instrument(skip(password), skip_all)]
fn both_should_fail(password: &str) {
    let _ = password;
}

fn main() {}
